--- a/input.css
+++ b/input.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.technology {
+    @apply w-10;
+    @apply md:w-16;
+    @apply lg:w-24;
+    @apply h-10;
+    @apply lg:h-24;
+}
